--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "php": "^8.0",
         "alleyinteractive/composer-wordpress-autoloader": "^1.0",
+        "alleyinteractive/wp-block-converter": "dev-feature",
         "mantle-framework/support": "^0.9.1"
     },
     "require-dev": {
