--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": "^8.0",
         "alleyinteractive/composer-wordpress-autoloader": "^1.0",
         "alleyinteractive/wp-block-converter": "^1.0",
-        "mantle-framework/support": "^0.9.1"
+        "mantle-framework/support": "^0.9.1",
+        "nesbot/carbon": "^2.64"
     },
     "require-dev": {
         "alleyinteractive/alley-coding-standards": "^1.0",
