--- a/.github/workflows/upgrade-wordpress-plugin.yml
+++ b/.github/workflows/upgrade-wordpress-plugin.yml
@@ -17,4 +17,4 @@ jobs:
     - uses: alleyinteractive/action-update-wordpress-plugin@v1.0.2
       with:
         plugin-file: 'plugin.php'
-        upgrade-npm-dependencies: "true"
+        upgrade-npm-dependencies: "false"
